--- a/app.json
+++ b/app.json
@@ -24,6 +24,11 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      ["expo-camera", {
+        "cameraPermission": "Permitir que la app use la cámara"
+      }]
+    ]
   }
 }
